login cutoff fix

--- a/client/main.css
+++ b/client/main.css
@@ -63,6 +63,7 @@
 }
 
 .stretch {
+  min-height: 1000px; 
   height: 100%; 
 }
 
@@ -84,6 +85,7 @@ body {
   padding: 0;
   margin: 0;
   height: 100%; 
+  min-height: 700px; 
 
   font-size: 14px;
 }
